--- a/course/09_units/task_09_units/pubspec.yaml
+++ b/course/09_units/task_09_units/pubspec.yaml
@@ -4,7 +4,6 @@ description: Work in progress for a Unit Converter app.
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
@@ -24,10 +23,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-  # TODO: Add an asset. You can choose to use the regular or goofy units
-  # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/data/regular_units.json
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
